---
source: compiler/flux_parser/src/grammar/item/function.rs
expression: s
---
Root@0..8
  FnDecl@0..8
    Visibility@0..0
    Fn@0..2 "fn"
    Whitespace@2..3 " "
    Name@3..6
      Ident@3..6 "foo"
    ParamList@6..6
      Poisoned@6..6
      Poisoned@6..6
    FnReturnType@6..6
    BlockExpr@6..8
      LBrace@6..7 "{"
      RBrace@7..8 "}"


Errors:
[E0001] Error: expected syntax not found
   ,-[test.flx:1:7]
   |
 1 | fn foo{}
   |       |  
   |       `-- expected `(` in function parameter list
---'
[E0001] Error: expected syntax not found
   ,-[test.flx:1:7]
   |
 1 | fn foo{}
   |       |  
   |       `-- expected `)` in parameter list
---'

